--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,8 +13,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <node.version>v14.18.3</node.version>
-        <npm.version>6.14.15</npm.version>
+        <node.version>v16.15.1</node.version>
+        <npm.version>8.12.1</npm.version>
     </properties>
 
     <name>PWM Password Self Service: Angular Client JAR</name>
@@ -109,7 +109,7 @@
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>install</arguments>
+                            <arguments>install --legacy-peer-deps</arguments>
                         </configuration>
                     </execution>
                     <execution>
