--- a/client/angular/package.json
+++ b/client/angular/package.json
@@ -56,7 +56,7 @@
         "karma-sourcemap-loader": "0.3.7",
         "karma-spec-reporter": "0.0.32",
         "karma-webpack": "5.0.0",
-        "lodash": "4.17.21",
+        "lodash": ">=4.17.21",
         "moment": "^2.29.3",
         "ngtemplate-loader": "2.0.1",
         "node-sass": "^7.0.0",
@@ -77,8 +77,16 @@
         "url-loader": "1.0.1",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "3.1.14",
+        "webpack-dev-server": "3.11.3",
         "webpack-merge": "4.1.2",
         "write-file-webpack-plugin": "4.2.0"
+    },
+    "overrides": {
+        "jshint-loader": {
+            "lodash": ">=4.17.21"
+        },
+        "rcloader": {
+            "lodash": ">=4.17.21"
+        }
     }
 }
