--- a/rest-test-service/pom.xml
+++ b/rest-test-service/pom.xml
@@ -82,9 +82,9 @@
             <version>2.9.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>org.pwm-project</groupId>
