--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -116,6 +116,7 @@
                             <trimSpaces>true</trimSpaces>
                             <compilerVersion>${maven.compiler.source}</compilerVersion>
                             <keepSources>false</keepSources>
+                            <threads>20</threads>
                         </configuration>
                     </execution>
                 </executions>
@@ -142,30 +143,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- builds xml file of dependencies and licenses for use in about page -->
             <plugin>
-                <!-- creates the classes directory early in the build so the attribution plugin doesn't fail -->
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>generate-sources</id>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <tasks>
-                                <mkdir dir="${project.build.directory}/classes"/>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <!-- builds xml file of dependencies and licenses for use in about page -->
                 <groupId>com.github.jinnovations</groupId>
                 <artifactId>attribution-maven-plugin</artifactId>
-                <version>0.9.8</version>
+                <version>0.9.9-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
@@ -175,6 +157,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <threads>20</threads>
                     <outputFile>${project.build.directory}/classes/attribution.xml</outputFile>
                     <dependencyOverrides>
                         <dependencyOverride>
