--- a/client/angular/package.json
+++ b/client/angular/package.json
@@ -17,19 +17,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@microfocus/ias-icons": "1.0.4",
+        "@microfocus/ias-icons": "1.1.3",
         "@microfocus/ng-ias": "1.0.1",
-        "@microfocus/ux-ias": "1.1.2",
-        "@uirouter/angularjs": "1.0.15",
-        "angular": "^1.7.9",
-        "angular-aria": "1.7.8",
-        "angular-sanitize": "1.7.9",
-        "angular-translate": "^2.19.0",
-        "core-js": "3.5.0",
+        "@microfocus/ux-ias": "1.1.3",
+        "@uirouter/angularjs": "1.0.30",
+        "angular": "1.8.3",
+        "angular-aria": "1.8.3",
+        "angular-sanitize": "1.8.3",
+        "angular-translate": "2.19.0",
+        "core-js": "3.22.8",
         "textangular": "1.5.16"
     },
     "devDependencies": {
-        "@types/angular": "^1.8.1",
+        "@types/angular": "^1.8.3",
         "@types/angular-mocks": "1.5.11",
         "@types/angular-translate": "2.15.2",
         "@types/angular-ui-router": "1.1.40",
@@ -49,25 +49,25 @@
         "jshint": "^2.13.4",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
-        "karma": "^4.4.1",
+        "karma": "^6.3.20",
         "karma-chrome-launcher": "2.2.0",
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "1.3.1",
-        "karma-phantomjs-launcher": "1.0.4",
         "karma-sourcemap-loader": "0.3.7",
         "karma-spec-reporter": "0.0.32",
-        "karma-webpack": "3.0.5",
-        "moment": "2.21.0",
+        "karma-webpack": "5.0.0",
+        "lodash": ">=4.17.21",
+        "moment": "^2.29.4",
         "ngtemplate-loader": "2.0.1",
-        "node-sass": "^6.0.1",
-        "phantomjs": "2.1.7",
-        "phantomjs-prebuilt": "2.1.16",
+        "node-sass": "^7.0.0",
         "postcss-loader": "2.1.1",
         "raw-loader": "0.5.1",
         "rimraf": "2.6.2",
         "sass-loader": "6.0.7",
+        "serialize-javascript": "4.0.0",
         "string-replace-loader": "2.1.1",
         "style-loader": "0.20.3",
+        "trim-newlines": ">=3.0.1",
         "ts-loader": "4.0.1",
         "ts-mockito": "2.3.1",
         "tslint": "5.9.1",
@@ -77,8 +77,16 @@
         "url-loader": "1.0.1",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "3.1.14",
+        "webpack-dev-server": "3.11.3",
         "webpack-merge": "4.1.2",
         "write-file-webpack-plugin": "4.2.0"
+    },
+    "overrides": {
+        "jshint-loader": {
+            "lodash": ">=4.17.21"
+        },
+        "rcloader": {
+            "lodash": ">=4.17.21"
+        }
     }
 }
