--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -345,6 +345,9 @@ token.storage.maxKeyLength=100
 rest.server.forgottenPW.token.display=%LABEL%  %MESSAGE%  %VALUE%
 rest.server.forgottenPW.ruleDelimiter=<br/>
 urlshortener.url.regex=(https?://([^:@]+(:[^@]+)?@)?([a-zA-Z0-9.]+|d{1,3}.d{1,3}.d{1,3}.d{1,3}|[[0-9a-fA-F:]+])(:d{1,5})?/*[a-zA-Z0-9/\%_.]*?*[a-zA-Z0-9/\%_.=&#]*)
+versionCheck.url=https://www.pwm-project.org/pwm-data-service/version
+versionCheck.checkIntervalSeconds=82803
+versionCheck.checkIntervalErrorSeconds=303
 wordlist.builtin.path=/WEB-INF/wordlist.zip
 wordlist.maxCharLength=64
 wordlist.minCharLength=2
