--- a/data-service/pom.xml
+++ b/data-service/pom.xml
@@ -7,6 +7,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <url>https://github.com/pwm-project/pwm</url>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pwm-data-service</artifactId>
