--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -11,6 +11,7 @@
 
     <packaging>jar</packaging>
 
+    <url>https://github.com/pwm-project/pwm</url>
     <artifactId>pwm-docker</artifactId>
 
     <name>PWM Password Self Service: Docker Image</name>
