--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <url>https://github.com/pwm-project/pwm</url>
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm-parent</artifactId>
     <version>2.0.2-SNAPSHOT</version>
