--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,6 +9,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <url>https://github.com/pwm-project/pwm</url>
     <artifactId>pwm-server</artifactId>
     <packaging>jar</packaging>
 
