--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <url>https://github.com/pwm-project/pwm</url>
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm-parent</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <packaging>pom</packaging>
 
     <name>PWM Password Self Service</name>
@@ -46,7 +46,7 @@
         <jarsigner.skip>true</jarsigner.skip>
 
         <!-- git.commit.time is populated via git-commit-id-plugin and results in a (hopefully) reproducible maven build -->
-        <project.build.outputTimestamp>2022-03-11T12:52:47Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-07-24T07:51:27Z</project.build.outputTimestamp>
     </properties>
 
     <modules>
