--- a/data-service/pom.xml
+++ b/data-service/pom.xml
@@ -79,9 +79,10 @@
                         <id>copy-resources</id>
                         <phase>validate</phase>
                         <goals>
-                            <goal>copy-resources</goal>
+                            <goal>copy-reaasources</goal>
                         </goals>
                         <configuration>
+                            <propertiesEncoding>ISO-8859-1</propertiesEncoding>
                             <outputDirectory>${project.build.outputDirectory}/src</outputDirectory>
                             <resources>
                                 <resource><directory>src/main/java</directory></resource>
