--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -19,16 +19,18 @@
   ~ limitations under the License.
   -->
 
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         id="PWM" version="3.0">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee web-app_4_0.xsd"
+         version="4.0">
+
     <display-name>PWM Password Management</display-name>
     <!-- <distributable/> Clustering/Session replication is not supported -->
     <description>Password Management Servlet</description>
     <context-param>
         <description>
-            Explicit location of application path working directory or the literal value "unspecified".  See the environment documentation at /public/reference/environment.jsp for more information.
+            Explicit location of application path working directory or the literal value "unspecified".
+            See the environment documentation at /public/reference/environment.jsp for more information.
         </description>
         <param-name>applicationPath</param-name>
         <param-value>unspecified</param-value>
@@ -122,10 +124,6 @@
         <filter-class>password.pwm.http.filter.CookieManagementFilter</filter-class>
     </filter>
     <filter>
-        <filter-name>GZIPFilter</filter-name>
-        <filter-class>password.pwm.http.filter.GZIPFilter</filter-class>
-    </filter>
-    <filter>
         <filter-name>DomainInitFilter</filter-name>
         <filter-class>password.pwm.http.filter.DomainInitFilter</filter-class>
     </filter>
@@ -163,10 +161,6 @@
     </filter>
     <filter-mapping>
         <filter-name>CookieUpdateFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>GZIPFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <filter-mapping>
