--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -331,7 +331,7 @@ smtp.io.readTimeoutMs=30000
 smtp.subjectEncodingCharset=UTF8
 smtp.retryableSendResponseStatus=400,420,421
 telemetry.senderImplementation=password.pwm.svc.telemetry.HttpTelemetrySender
-telemetry.senderSettings={"url":"https://www.pwm-project.org/pwm-data-service/telemetry"}
+telemetry.senderSettings={"url":"https://service.pwm-project.org/pwm-data-service/telemetry"}
 telemetry.sendFrequencySeconds=259203
 telemetry.minimumAuthentications=10
 token.cleaner.intervalSeconds=3605
@@ -348,7 +348,7 @@ token.storage.maxKeyLength=100
 rest.server.forgottenPW.token.display=%LABEL%  %MESSAGE%  %VALUE%
 rest.server.forgottenPW.ruleDelimiter=<br/>
 urlshortener.url.regex=(https?://([^:@]+(:[^@]+)?@)?([a-zA-Z0-9.]+|d{1,3}.d{1,3}.d{1,3}.d{1,3}|[[0-9a-fA-F:]+])(:d{1,5})?/*[a-zA-Z0-9/\%_.]*?*[a-zA-Z0-9/\%_.=&#]*)
-versionCheck.url=https://www.pwm-project.org/pwm-data-service/version
+versionCheck.url=https://service.pwm-project.org/pwm-data-service/version
 versionCheck.checkIntervalSeconds=82803
 versionCheck.checkIntervalErrorSeconds=303
 wordlist.builtin.path=/WEB-INF/wordlist.zip
