--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <url>https://github.com/pwm-project/pwm</url>
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm-parent</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>PWM Password Self Service</name>
