--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -48,8 +48,6 @@ cache.pwRuleCheckLifetimeMS=30000
 cache.uniqueFormValueLifetimeMS=30000
 client.ajax.activityMaxEpsRate=100
 client.ajax.changePasswordWaitCheckSeconds=3
-client.ajax.typingTimeout=20000
-client.ajax.typingWait=700
 client.formNonce.enable=true
 client.formNonce.length=10
 client.form.clientRegexEnable=true
@@ -146,20 +144,6 @@ http.header.sendXXSSProtection=true
 http.header.noise.length=128
 http.header.csp.nonce.bytes=24
 http.header.cacheControl=no-cache, no-store, must-revalidate, proxy-revalidate
-http.cookie.default.secureFlag=auto
-http.cookie.httponly.enable=true
-http.cookie.theme.name=theme
-http.cookie.theme.age=604800
-http.cookie.locale.name=locale
-http.cookie.authRecord.name=authRecord
-http.cookie.authRecord.age=604800
-http.cookie.maxReadLength=10240
-http.cookie.captchaSkip.name=captcha-key
-http.cookie.captchaSkip.age=86400
-http.cookie.login.name=SESSION
-http.cookie.nonce.name=ID
-http.cookie.nonce.length=32
-http.cookie.sameSite.value=Strict
 http.parameter.forward=forwardURL
 http.parameter.logout=logoutURL
 http.parameter.theme=theme
@@ -191,31 +175,6 @@ intruder.delayPerCountMS=200
 intruder.delayMaxJitterMS=2000
 intruder.storageHashAlgorithm=SHA256
 l10n.rtl.regex=^(ar|dv|he|iw|fa|nqo|ps|sd|ug|ur|yi|.*[-_](Arab|Hebr|Thaa|Nkoo|Tfng))(?!.*[-_](Latn|Cyrl)($|-|_))($|-|_)
-ldap.resolveCanonicalDN=true
-ldap.cache.canonical.enable=true
-ldap.cache.canonical.seconds=600
-ldap.cache.userGuid.enable=true
-ldap.cache.userGuid.seconds=3600
-ldap.chaiSettings=
-ldap.proxy.connectionsPerProfile=10
-ldap.proxy.maxConnections=50
-ldap.proxy.idleThreadLocal.timeoutMS=90000
-ldap.extensions.nmas.enable=true
-ldap.connection.timeoutMS=30000
-ldap.profile.retryDelayMS=30000
-ldap.promiscuousEnable=false
-ldap.password.replicaCheck.initialDelayMS=1000
-ldap.password.replicaCheck.cycleDelayMS=7000
-ldap.password.change.self.enable=true
-ldap.password.change.helpdesk.enable=true
-ldap.guid.pattern=@UUID@
-ldap.browser.maxEntries=1000
-ldap.search.paging.enable=auto
-ldap.search.paging.size=500
-ldap.search.parallel.enable=true
-ldap.search.parallel.factor=5
-ldap.search.parallel.threadMax=50
-ldap.oracle.postTempPasswordUseCurrentTime=false
 localdb.aggressiveCompact.enabled=false
 localdb.implementation=password.pwm.util.localdb.XodusLocalDB
 localdb.initParameters=
@@ -313,7 +272,7 @@ security.http.stripHeaderRegex=\\n|\\r|(?ism)%0A|%0D
 security.http.performCsrfHeaderChecks=false
 security.http.promiscuousEnable=false
 security.http.permittedUserPhotoMimeTypes=image/gif,image/png,image/jpeg
-security.http.permittedUrlPathCharacters=^[a-zA-Z0-9-]*$
+security.http.permittedUrlPathCharacters=^[a-zA-Z0-9-_]*$
 security.http.config.cspHeader=default-src 'self'; object-src 'none'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; report-uri @PwmContextPath@/public/command/cspReport
 security.httpsServer.selfCert.futureSeconds=63113904
 security.httpsServer.selfCert.alg=RSA
