--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -230,7 +230,7 @@
                             <rules>
                                 <banDuplicatePomDependencyVersions/>
                                 <requireJavaVersion>
-                                    <version>[11,14]</version>
+                                    <version>[11,]</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>${pwm.minimum.maven.version}</version>
@@ -255,12 +255,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.2</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>10.9.3</version>
+                        <version>10.10.0</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -270,7 +270,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>build/checkstyle.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -293,7 +292,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>${project.root.basedir}/build/checkstyle-header.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -316,7 +314,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>${project.root.basedir}/build/checkstyle-jsp.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -339,7 +336,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.3.3</version>
+                <version>4.7.3.4</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
@@ -349,7 +346,7 @@
                 </dependencies>
                 <configuration>
                     <skip>${spotbugs.skip}</skip>
-                    <fork>false</fork>
+                    <fork>true</fork>
                     <excludeFilterFile>${project.root.basedir}/build/spotbugs-exclude.xml</excludeFilterFile>
                     <includeTests>false</includeTests>
                     <effort>max</effort>
@@ -467,7 +464,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.2.0</version>
+            <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
